# fatturavault

./: .gitignore  ANALYTICS-ICP.md  ARCHITECTURE.it.md  ARCHITECTURE.md  BACKEND-ICP-MODELLO-DATI.md  CIFRATURA-CLIENT-SIDE.md  Cargo.toml  GESTIONE-ICP.md  INBOX-AI-TEMPORANEA.md  LICENSE  NOTE-ARCHITETTURA-STORAGE-EVOLUTIVO.md  README.it.md  README.md  RESET-INFO.md  SECURITY.it.md  SECURITY.md  SICUREZZA-UTENTE.md  icp.yaml
.icp/data/mappings/: ic.ids.json
frontend/: .env.example  README.md  package-lock.json  package.json
frontend/scripts/: check-staging-cycles.ps1  deploy-staging-assets.cjs
frontend/src/: app.html
frontend/src/lib/: auth.ts  inbox.ts  inboxAnalysis.ts  notes.ts  postits.ts  vatQuarterly.ts  vault.ts
frontend/src/lib/components/: AiStatusBadge.svelte  CategoryBadge.svelte  CategoryDocumentList.svelte  (+9 more)
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/types/: pdfjs-worker.d.ts
frontend/static/: .ic-assets.json5  site.webmanifest
frontend/static/.well-known/: ic-domains  ii-alternative-origins
icp-monitor/: README.md  config.local.json  istruzioni.txt  package.json  server.mjs
icp-monitor/public/: app.js  index.html  styles.css
src/shared/: Cargo.toml
src/shared/src/: lib.rs
src/vault_analytics/: Cargo.toml  vault_analytics.did
src/vault_analytics/src/: lib.rs
src/vault_backend/: Cargo.toml  vault_backend.did
src/vault_backend/src/: lib.rs
src/vault_inbox/: Cargo.toml  vault_inbox.did
src/vault_inbox/src/: lib.rs
src/vault_storage/: Cargo.toml  vault_storage.did
src/vault_storage/src/: lib.rs
(+26 files in other folders)
